--- a/.vscodeignore
+++ b/.vscodeignore
@@ -1,3 +1,4 @@
+# Ignore development and test files
 .vscode/**
 .vscode-test/**
 src/**
@@ -9,3 +10,6 @@ vsc-extension-quickstart.md
 **/*.map
 **/*.ts
 **/.vscode-test.*
+
+# ✅ Explicitly INCLUDE CLI directory
+!cli/**
