--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "filo",
   "displayName": "Filo",
-  "description": "Create folders and files easily from terminal or prompt",
+  "description": "Create folders and files instantly from your terminal or inside VS Code.",
   "version": "1.0.0",
   "publisher": "afnanafsal",
   "engines": {
@@ -12,7 +12,10 @@
     "url": "https://github.com/afnanafsal/filo.git"
   },
   "categories": ["Other"],
-  "activationEvents": ["onCommand:filo.createFiles"],
+  "activationEvents": [
+    "onStartupFinished",
+    "onCommand:filo.createFiles"
+  ],
   "main": "./out/extension.js",
   "icon": "./images/icon.png",
   "contributes": {
